--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,10 @@
     --logoBg: #fef9eb;
     --resumeBg: #11121a;
 
-    --primary: #454f8a;
-    --secondary: #17244f;
-    --tertiary: #11121a;
     --opposite: #eeeeee;
+    --primary: #11121a;
+    --secondary: #454f8a;
+    --tertiary: #17244f;
     --nonActive: #eab308;
 
     --skillBr: #9b8b74;
@@ -45,9 +45,9 @@
     --resumeBg: #010614;
 
     --opposite: #111111;
-    --primary: #64748b;
-    --secondary: #b3c2da;
-    --tertiary: #e5e8ee;
+    --primary: #e5e8ee;
+    --secondary: #64748b;
+    --tertiary: #b3c2da;
     --nonActive: #eab308;
 
     --skillBr: #64748b;
@@ -61,12 +61,3 @@
     --particleC: #7393b3;
   }
 }
-/* .stagger-fade:nth-child(1) {
-  animation-delay: 0.1s;
-}
-.stagger-fade:nth-child(2) {
-  animation-delay: 0.2s;
-}
-.stagger-fade:nth-child(3) {
-  animation-delay: 0.3s;
-} */
